--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                                 <p class="title">Peter Moor</p>
                                 <p class="desc">Student of Web Design</p>
                                 <div class="dots">
-                                    <span class="dot active"></span>
                                     <span class="dot"></span>
+                                    <span class="dot active"></span>
                                     <span class="dot"></span>
                                 </div>
                             </div>
@@ -549,12 +549,251 @@
                                 <a href="#!" class="btn">Read more</a>
                             </div>
                         </div>
+
+                        <!-- Blog item 4 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 5 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 6 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 7 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 8 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 9 -->
+                        <div class="item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remot job?"
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="dots">
+                        <span class="dot"></span>
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
         </main>
 
         <!-- Footer -->
-        <footer></footer>
+        <footer>
+            <div class="main-content">
+                <div class="row">
+                    <!-- Column 1 -->
+                    <div class="column">
+                        <img
+                            src="./assets/img/logo-white.svg"
+                            alt="Lesson."
+                            class="logo"
+                        />
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="socials">
+                            <a href="#!">
+                                <img
+                                    src="./assets/icon/twitter.svg"
+                                    alt="twitter"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icon/facebook.svg"
+                                    alt="facebook"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icon/linked_in.svg"
+                                    alt="linked_in"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icon/instagram.svg"
+                                    alt="instagram"
+                                    class="icon"
+                                />
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Column 2 -->
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 3 -->
+                    <div class="column">
+                        <h3 class="heading">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 4 -->
+                    <div class="column">
+                        <h3 class="heading">Address</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!"
+                                    ><strong>Location:</strong> 27 Division St,
+                                    New York, NY 10002, USA</a
+                                >
+                            </li>
+                            <li>
+                                <a href="#!"
+                                    ><strong>Email:</strong> email@gmail.com</a
+                                >
+                            </li>
+                            <li>
+                                <a href="#!"
+                                    ><strong>Phone:</strong> + 000 1234 567
+                                    890</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="copyright">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
